<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgPregunta"
        android:src="@drawable/pregunta"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtIngrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="105dp"
        android:text="@string/string_ingresar"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPregunta"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Edtnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/hint1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="@+id/txtIngrese"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="383dp" />

    <EditText
        android:id="@+id/EdtPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/hint2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@id/txtIngrese"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="463dp" />

    <EditText
        android:id="@+id/Edtaltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/hint3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="@+id/txtIngrese"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="553dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/yellow"
        android:text="@string/btn1"
        android:textColor="#0B0A0A"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="640dp" />


</androidx.constraintlayout.widget.ConstraintLayout>